<resources>
    <string name="app_name">MDT.Droid2</string>
    <string name="action_settings">Settings</string>
    
	<string name="login_to_begin">Login to begin</string>
	
	<string name="login_icon">login icon</string>
	<string name="enter_pin_title">Please enter your PIN to configure this MDT</string>


	<string-array name="PageEntries">
		<item>Trip Info</item>
		<item>Fare Counter</item>
		<item>Route Map</item>
		<item>Vehicle Assignment</item>
	</string-array>
	<string-array name="PageEntriesDefault">
		<item>Trip Info</item>
		<item>Fare Counter</item>
		<item>Vehicle Assignment</item>
	</string-array>



	
	
	<string name="hostnames">Hostnames...</string>
	<string name="connected_to">Connected to</string>

	<string name="ports">Ports...</string>
	<string name="receiving_can_frames">Receiving CAN Frames on port</string>

	
	<!--<string name="sShowCountClearButton">ShowCountClearButton</string>-->
	<!--<string name="sPassengerCountNumpad">PassengerCountNumpad</string>-->
	<string name="sPageList">PageList</string>
	<string name="sTripInfo">Trip Info</string>
	<string name="sFareCounter">Fare Counter</string>
	<string name="sRouteMap">Route Map</string>
	<string name="sVehicleAssignment">Vehicle Assignment</string>
	
	
	<string name="pinPromptSettings">Please enter your PIN to configure this MDT</string>
	<string name="pinPromptDriverTry1">Please enter your PIN to continue</string>
	<string name="pinPromptDriverTryN">Incorrect PIN! Please try again</string>
	<string name="pinPromptDriverNoPin">Your MDT Account does not have a PIN associated with it.</string>
	<string name="pinPromptDriverTries">Your MDT Account has been locked.</string>
	<string name="pinPromptDriverReset">Please enter a new PIN</string>
	<string name="pinPromptDriverResetNoMatch">Those PINs did not match. Please enter a new PIN</string>
	<string name="pinPromptDriverResetTooLong">That PIN is too long. Please enter a PIN between 4 and 8 digits long</string>
	<string name="pinPromptDriverResetTooShort">That PIN is too short. Please enter a PIN between 4 and 8 digits long</string>
	<string name="pinPromptDriverResetNotNum">That PIN had non-numeric characters in it. Please enter a PIN that only uses the numbers 0-9</string>
	<string name="pinPromptDriverConfirm">Type the PIN again to confirm</string>

	<!--Settings related strings-->
	<string name="note_this_option">NOTE: This option must ONLY be turned on if the server is set up to support it</string>

	<string name="vehicle_information">Vehicle Information</string>
	<string name="networking">Networking</string>





	<string name="has_medius_installed_key">HasMedius</string>
	<string name="vehicle_has_medius_installed">Vehicle has Medius installed</string>

	<string name="apc_enabled_key">APCEnabled</string>
	<string name="vehicle_has_apc_installed">Vehicle has APC installed</string>

	<string name="is_ferry_key">IsFerry</string>
	<string name="vehicle_is_a_ferry">Vehicle is a ferry</string>

	<string name="comms_address_key">CommsAddress</string>
	<string name="comms_address">Comms Address (set by server)</string>

	<string name="company_tag_key">CompanyTag</string>
	<string name="company_tag">Company Tag (set by server)</string>

	<string name="secure_login_key">SecureLogin</string>
	<string name="ensure_mdt_login_is_secure">Ensure MDT login is secure - require PINs from drivers and captains</string>

	<string name="server_key">Server</string>
	<string name="server_url_title">Connexionz Server URL</string>

	<string name="local_ip_address_key">HostName</string>
	<string name="local_ip_address_title">Medius Local IP Address</string>

	<string name="map_tile_key">MapTile</string>
	<string name="map_tile_server_title">Map Tile Server IP Address</string>

	<string name="can_receive_port_key">CANReceivePort</string>
	<string name="can_receive_port_title">Recieve CAN messages on port</string>

	<string name="can_send_port_key">CANSendPort</string>
	<string name="can_send_port_title">Transmit CAN messages on port</string>

	<string name="http_port_key">HttpPort</string>
	<string name="http_port_title">Medius HTTP Port</string>

	<string name="show_trip_info_tab_key">ShowTripInfoTab</string>
	<string name="trip_info_title">&quot;"Trip Info"&quot; tab...</string>
	
	<string name="trip_info_setting_key">TripInfoSetting</string>
	<string name="trip_info_setting_title">Show &quot;Trip Info&quot; tab...</string>

	<string name="passenger_count_number_pad_key">passenger_count_number_pad_key</string>
	<string name="passenger_count_number_pad_title">Passenger count number pad</string>
	<string name="passenger_count_number_pad_summary">Drivers enter passenger boardings and alightings incrementally</string>
	
	<string name="show_clear_passenger_count_button_key">show_clear_passenger_count_button_key</string>
	<string name="show_clear_passenger_count_button_title">Show &quot;Clear Passenger Count&quot; button</string>

	<string name="fare_count_key">fare_count_key</string>
	<string name="fare_count_title">&quot;Fare Count&quot; tab...</string>

	<string name="vehicle_assignment_key">vehicle_assignment_key</string>
	<string name="show_vehicle_assignment_tab_key">show_vehicle_assignment_tab_key</string>

	<string name="allow_drivers_to_assign_vehicle_key">SelfAssign</string>
	<string name="allow_drivers_to_assign_title">Allow driver to assign their own vehicle</string>

	<string name="allow_drivers_to_enter_passenger_count">PastCounts</string>
	<string name="allow_drivers_to_enter_title">Allow driver to enter passenger counts after the fact</string>

	<string name="show_messaging_bar_key">show_messaging_bar_key</string>
	<string name="show_messaging_bar_title">Show messaging bar</string>

	<string name="screen_shutoff_speed_key">screen_shutoff_speed_key</string>
	<string name="screen_shutoff_speed_title">Screen shutoff speed (m/s)</string>

	<string name="settings_pin_key">settings_pin_key</string>
	<string name="settings_pin_title">Settings PIN</string>

	<string name="show_seconds_in_time_key">show_seconds_in_time_key</string>
	<string name="show_seconds_in_time_title">Show Seconds in Time</string>

	<string name="sMovingThreshold">MovingThreshold</string>






	<!--<string name="sSecureLogin">SecureLogin</string>-->
	<!--<string name="sPastCounts">PastCounts</string>
	<string name="sSelfAssign">SelfAssign</string>-->
	<!--<string name="sCommsAddress">CommsAddress</string>-->
	<!--<string name="sCompanyTag">CompanyTag</string>-->
	<!--<string name="sIsFerry">IsFerry</string>-->
	<!--<string name="sAPCEnabled">APCEnabled</string>-->
	<!--<string name="sHasMedius">HasMedius</string>-->
	<!--<string name="sHttpPort">HttpPort</string>-->
	<!--<string name="sCANSendPort">CANSendPort</string>
	<string name="sCANReceivePort">CANReceivePort</string>-->
	<!--<string name="sMapTile">MapTile</string>-->
	<!--<string name="sHostName">HostName</string>-->
	<!--<string name="sServer">Server</string>-->
	<!--<string name="sShowMessageBar">ShowMessageBar</string>-->
	<!--<string name="sClearResources">ClearResources</string>-->
	<!--<string name="show_route_map">ShowRouteMap</string>-->
	<!--<string name="sSettingsPIN">SetingsPIN</string>-->





	<string name="preferences_sample">Preferences Sample</string>

	<string name="hostnames_key">Hostnames</string>
	<string name="hostnames_title">Hostnames...</string>
	<string name="hostnames_summary">Connected to   </string>

	<string name="ports_key">Ports</string>
	<string name="ports_title">Ports...</string>
	<string name="ports_summary">Recieving CAN Frames on port</string>
	
	<string name="pages_key">Pages</string>
	
	<string name="trip_info_option_key">trip_info_option_key</string>
	<string name="trip_info_option_title">Trip Info Options</string>
	
	<string name="route_map_key">route_map_key</string>
	<string name="route_map_title">&quot;Route Map&quot; tab...</string>
	
	<string name="misc_key">misc_key</string>
	<string name="misc_title">Misc</string>
	
	<string name="clear_resource_key">clear_resource_key</string>
	<string name="clear_resource_title">Clear Resource XML Cache</string>
	
	<string name="save_settings">Save</string>
	<string name="close_mdt">Close MDT</string>
	
	<string name="login_as">Login As</string>
	
	<string name="at_the_wheel">At The Wheel</string>
	<string name="out_of_vehicle">Out of Vehicle</string>
	<string name="on_a_break">On a Break</string>
	
	<string name="brightness">Brightness</string>

	<string name="brightness_permission_title">App Permission</string>
	<string name="brightness_permission_message">The app does not have permission to change brightness. Give permission to change brightness? </string>
	
	<string name="ok">Ok</string>
	<string name="cancel">Cancel</string>

	<string name="nightMode">Night Mode</string>

	<string name="logout">Logout</string>
	<string name="current_time">Current Time</string>
	<string name="no_trip">No Trip</string>
	<string name="clock_icon">clock icon</string>
	<string name="passenger_count">PASSENGER\n COUNT</string>
	<string name="next_time_point">Next Timepoint</string>
	<string name="next_timepoint">Next Timepoint:</string>
	<string name="no_trip_active">No trip active</string>
	<string name="min_placeholder">-26 min -26 sec</string>

	<string name="no_active_trips">No active Trips</string>

</resources>
