<?xml version="1.0" encoding="utf-8" ?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	>
	<CheckBoxPreference
		app:enabled="false"
		android:defaultValue="false"
		android:key="@string/trip_info_setting_key"
		android:title="Show &quot;Trip Info&quot; tab..."
		android:icon="@mipmap/icon_trip_info"
	/>
	<PreferenceCategory
		android:title="@string/trip_info_option_title"
		android:key="@string/trip_info_option_key">

		<SwitchPreferenceCompat
			app:allowDividerBelow="true"
			android:key="@string/passenger_count_number_pad_key"
			android:title="@string/passenger_count_number_pad_title"
			android:summary="@string/passenger_count_number_pad_summary"
			android:defaultValue="false"
			android:icon="@mipmap/icon_passenger_count_numpad"/>

		<CheckBoxPreference
			app:allowDividerBelow="true"
			android:defaultValue="true"
			android:key="@string/show_clear_passenger_count_button_key"
			android:title="@string/show_clear_passenger_count_button_title"
			android:icon="@mipmap/icon_clear_resource"
			/>
	</PreferenceCategory>
</PreferenceScreen>