<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <WebView
        android:id="@+id/routeMapWebView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/noActiveTripsContainerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@color/brown"
        android:orientation="horizontal"
        android:padding="@dimen/padding_standard">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="icon timer"
            android:src="@drawable/icon_navigation"
            android:tint="@color/icon_color_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_active_trips"
            android:textSize="@dimen/textsize_large" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nextTimePointContainerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@color/brown"
        android:orientation="horizontal"
        android:padding="@dimen/padding_medium"
        android:visibility="gone">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_standard"
            android:contentDescription="icon timer"
            android:src="@drawable/icon_timer" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_timepoint"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nextTimePointTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_trip_active"
                android:textSize="@dimen/textsize_small" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nextTimePointMinTextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_placeholder" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>